# axbot-qq-docs

./: 404.html  Dockerfile  Makefile  README.md  default.conf  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml
command-list/base-cmd/: index.html
command-list/funny-cmd/: index.html
command-list/qq-group/: index.html
command-list/subscribe-cmd/: index.html
command-list/wt-cmd/: index.html
data-intro/wt-player-data/: index.html
docs/: index.md  report.md  roadmap.md  sponsor.md
docs/command-list/: base-cmd.md  funny-cmd.md  qq-group.md  subscribe-cmd.md  wt-cmd.md
docs/data-intro/: index.md  wt-data.md  wt-player-data.md
docs/user-guide/: axbot-credit.md  how-to-use.md
overrides/: main.html
report/: index.html
roadmap/: index.html
search/: search_index.json
sponsor/: index.html
user-guide/axbot-credit/: index.html
user-guide/how-to-use/: index.html
