[tool.poetry]
name = "axbot-qq-docs"
version = "0.1.0"
description = ""
authors = ["axiangcoding <axiangcoding@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.6.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
