[project]
name = "axbot-qq-docs"
version = "0.1.0"
description = ""
authors = [{ name = "axiangcoding", email = "axiangcoding@gmail.com" }]
requires-python = ">=3.11, <4"
readme = "README.md"
dependencies = ["mkdocs-material>=9.6.14,<10"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
